# financial-simulation-tool

./: .gitignore  .pylintrc  TODO  pyproject.toml  start.sh
.github/workflows/: ci.yml
config/model/: main.yml
src/: main.py
src/entities/: account.py  accounting_record.py  asset.py  bill.py  debt.py  income.py
src/entities/external_entities/: bank.py  biller.py  buyer.py  city_government.py  debtor.py  department_of_social_security.py  employer.py  healthcare_provider.py  internal_revenue_service.py  state_government.py  stock_market.py  us_treasury.py
src/entities/misc/: annual_federal_income_tax_record.py
src/exceptions/: bankrupt_exception.py  invalid_minimum_monthly_payment_exception.py  unknown_account_type_exception.py  unknown_asset_type_exception.py  unknown_time_period_type_exception.py
src/models/configs/: account_config.py  asset_config.py  bill_config.py  debt_config.py  full_config.py  income_stream_config.py  output_config.py
src/models/enums/: account_type.py  asset_type.py  time_period_type.py
src/services/: financial_calculator.py
